--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html {
-    background-color: rgba(9,57,60,255);
+    background-color: black;
     text-align: center;
     color: white;
 }
