--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -8,7 +8,11 @@
     font-style: normal;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3 {
+    font-family: "Black Ops One", system-ui;
+  }
+
+  p, h4, h5, h6 {
     font-family: "Calistoga", serif;    
   }
 
